--- a/.github/workflows/unzip.yml
+++ b/.github/workflows/unzip.yml
@@ -1,1 +1,22 @@
-
+name: Unzip site
+on:
+  workflow_dispatch:
+  push:
+    branches: [ main ]
+permissions:
+  contents: write
+jobs:
+  unzip:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install unzip
+        run: sudo apt-get update && sudo apt-get install -y unzip
+      - name: Unzip files
+        run: |
+          unzip -o hotel-paradiso-site.zip -d .
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add -A
+          git commit -m "Unzip site" || echo "No changes"
+          git push
